# fusilli-multiqc

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
fusilli_multiqc/: __init__.py  hooks.py  utils.py
fusilli_multiqc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fusilli_multiqc/modules/: __init__.py  detection.py  diversity.py  partners.py  preprocessing.py
tests/: conftest.py  test_detection.py  test_diversity.py  test_hooks.py  test_integration.py  test_multiqc_api.py  test_partners.py  test_preprocessing.py  test_utils.py
