[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusilli-multiqc"
version = "1.0.0"
description = "Custom MultiQC modules for FUSILLI fusion detection pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Chris Macdonald"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "multiqc>=1.25,<2.0",
    "pandas>=1.0",
    "numpy>=1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.entry-points."multiqc.modules.v1"]
fusilli_detection = "fusilli_multiqc.modules.detection:MultiqcModule"
fusilli_diversity = "fusilli_multiqc.modules.diversity:MultiqcModule"
fusilli_preprocessing = "fusilli_multiqc.modules.preprocessing:MultiqcModule"
fusilli_partners = "fusilli_multiqc.modules.partners:MultiqcModule"

[project.entry-points."multiqc.hooks.v1"]
execution_start = "fusilli_multiqc.hooks:execution_start"

[tool.setuptools.packages.find]
include = ["fusilli_multiqc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that run full multiqc (deselect with '-m \"not integration\"')",
]
